--- a/OOP.Samples.JavaScript/BlockBreaker.Original.html
+++ b/OOP.Samples.JavaScript/BlockBreaker.Original.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 
-<canvas id="myCanvas" width="480" height="320"></canvas>
+<!-- 純粋な JavaScript を使ったブロック崩しゲーム - ゲーム開発 | MDN
+ https://developer.mozilla.org/ja/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript -->
+
+    <canvas id="myCanvas" width="480" height="320"></canvas>
 
 <script>
     var canvas = document.getElementById("myCanvas");
